--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-  --bg: #004E98;
+  --bg: #245DDA;
   --window-bg: #ECE9D8;
   --title-bg: linear-gradient(to bottom, #0058e6 0%, #3a93ff 8%, #288eff 40%, #127dff 88%, #036bba 100%);
   --title-color: white;
